--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
   },
+  "include": [ "src/**/*" ],
+  "exclude": [ "node_modules", "dist" ]
 }
