--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-  },
-  "include": [ "src/**/*" ],
-  "exclude": [ "node_modules", "dist" ]
+    "noFallthroughCasesInSwitch": false
+  }
 }
